--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,7 +2,7 @@
     <h1>Nuestros Productos 1</h1>
     <br><br><br>
     <ul>
-        {{#each products.docs}}
+        {{#each products}}
         <li>{{this.title}}</li>
         {{/each}}
     </ul>
