Diseño de login casi terminado

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,3 +1,10 @@
 <div>
     <h1>INICIO</h1>
+    
+    <h2>Bienvenido {{first_name}} {{last_name}}</h2>
+
+    <button id="logoutBtn" type="button">Cerrar Sesión</button>
+
 </div>
+
+<script src="js/index.js"></script>
