AVance hasta la clase 19 - Desafio entregable. Terminada

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,7 +1,8 @@
 <div>
     <h1>Nuestros Productos</h1>
-    <br><br><br>
-    {{#each payload}}
+    <h2>Bienvenid@ {{user.first_name}} {{user.last_name}}</h2>
+    <br><br>
+    {{#each products.payload}}
         <div class="product-item">
             <p>Id: {{this._id}}</p>
             <p>Titulo: {{this.title}}</p>
