Passport en Login

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -4,4 +4,5 @@
     <label for="">Email: </label> <input type="email" name="email"><br><br>
     <label for="">Password: </label><input type="password" name="password"><br><br>
     <button type="submit">Iniciar Sesión</button>
+    <button><a href="/register">Registrarse</a></button>
 </form>
