Inicio con Github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -4,5 +4,6 @@
     <label for="">Email: </label> <input type="email" name="email"><br><br>
     <label for="">Password: </label><input type="password" name="password"><br><br>
     <button type="submit">Iniciar Sesión</button>
+    <button type="button"><a href="/api/session/github">Iniciar con GitHub</a></button>
     <button><a href="/register">Registrarse</a></button>
 </form>
