--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -6,7 +6,8 @@
     <button type="submit">Iniciar Sesión</button>
     <button type="button"><a href="/api/session/github">Iniciar con GitHub</a></button>
     <button><a href="/register">Registrarse</a></button> <br><br>
-    <button type="button" id="restoreBtn">Restaurar Password</button>
+    <button type="button" id="restoreBtn">Modificar Password</button>
+    <button type="button" id="recuperarBtn">Recuperar Password</button>
 </form>
 
 <h5 id="resultMessage"></h5>
