--- a/src/views/recoverpass.handlebars
+++ b/src/views/recoverpass.handlebars
@@ -1,6 +1,8 @@
 <h1>RECUPERACIÓN DE PASSWORD</h1>
 
-<form action="/api/session/login" method="post">
+<!-- FALTA RESOLVER COMO TOMAR EL ID DEL LINK PARA EL recoverpass/ID en este post -->
+
+<form action="/api/session/recoverpass" method="post">
     <label for="">Nueva Password: </label><input type="password" name="newPassword" id="newPasswordInput"><br><br>
     <button type="submit">Recuperar</button>
 </form>
