Ajuste del Logout

--- a/src/views/manageUsers.handlebars
+++ b/src/views/manageUsers.handlebars
@@ -16,7 +16,8 @@
     </select>
     <br><br>
     <button type="submit">Modificar Rol (USER/PREMIUM)</button>
-    <button type="button" id="restoreBtn">Modificar Password</button>
+    {{!<button type="button" id="restoreBtn">Modificar Password</button>}}
+    <button type="button" id="deleteBtn">Eliminar Usuario</button>
 </form>
 
 <h5 id="resultMessage"></h5>
