estilo en productos y solucionado el funcionamiento de previo y proxima pagina

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -3,6 +3,8 @@
     
     <h2>Bienvenido {{first_name}} {{last_name}}</h2>
 
+    <h3><a href="http://localhost:8080/products">Ver Productos</a></h3>
+
     <button id="logoutBtn" type="button">Cerrar Sesión</button>
 
 </div>
