Ajustado Agregar carrito sin error

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -22,7 +22,7 @@
             <p>Disponible: {{this.available}}</p>
             <p>Stock: {{this.stock}}</p>
             <p>Categoria: {{this.category}}</p>
-            <button id="{{this._id}}">AGREGAR AL CARRITO</button>
+            <button class="add-to-cart-btn" id="{{this._id}}">AGREGAR AL CARRITO</button>
             <br><br>
         </div>
     {{/each}}
