Logica de encontrar el ultimo carrito del user terminada

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div>
+<div id="user-data" data-first-name="{{user.first_name}}" data-last-name="{{user.last_name}}" data-email="{{user.email}}"></div>
     <h1>Nuestros Productos</h1>
     <h2>Bienvenid@ {{user.first_name}} {{user.last_name}}</h2>
     <br><br>
