--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,19 +1,20 @@
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tu Carrito de Compras</title>
-    <link rel="stylesheet" href="css/cart.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="/css/cart.css" />
+</head>
+<body>
 
+<div>
     <h1>Tu Carrito de Compras</h1>
 
     {{#if cart.products.length}}
       <form action="/update-cart" method="POST">
         {{#each cart.productsDetails}}
           <div class="product-item">
-            <p>Titulo: {{this.product.title}}</p>
+            <p>Titulo2: {{this.product.title}}</p>
             <input
               type="hidden"
               name="productId"
@@ -23,7 +24,7 @@
             <input
               type="number"
               id="quantity{{this.product._id}}"
-              name="quantity"
+              name="quantity{{this.product._id}}"
               value="{{this.quantity}}"
             />
             <button
@@ -48,8 +49,8 @@
     {{/if}}
 
     <button><a href="/products">Volver a Ver Productos</a></button>
+</div>
 
-    <script src="js/cart.js"></script>
 
-  </body>
-</html>
+<script src="/js/cart.js"></script>
+
