--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,63 +1,49 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tu Carrito de Compras</title>
-    <link rel="stylesheet" href="/css/cart.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tu Carrito de Compras</title>
+  <link rel="stylesheet" href="/css/cart.css" />
 </head>
+
 <body>
 
-<div id="cart" data-cart-id="{{cId}}">
+  <div id="cart" data-cart-id="{{cId}}">
     <h1>Tu Carrito de Compras</h1>
 
     {{#if cart.products.length}}
-      <form action="/confirm-cart" method="POST">
-        {{#each cart.productsDetails}}
-          <div class="product-item">
-            <p>Titulo2: {{this.product.title}}</p>
-            <input
-              type="hidden"
-              name="productId"
-              value="{{this.product._id}}"
-            />
-            <label for="quantity{{this.product._id}}">Cantidad:</label>
-            <input
-              type="number"
-              id="quantity{{this.product._id}}"
-              name="quantity{{this.product._id}}"
-              value="{{this.quantity}}"
-            />
-            <button
-              type="button"
-              class="decrease-quantity-btn"
-              data-product-id="{{this.product._id}}"
-            >-</button>
-            <button
-              type="button"
-              class="increase-quantity-btn"
-              data-product-id="{{this.product._id}}"
-            >+</button>
-            
-            <button 
-            type="button"
-            class="remove-product-btn" 
-            data-product-id="{{this.product._id}}"
-            >Eliminar</button> 
+    <form action="/confirm-cart" method="POST">
+      {{#each cart.productsDetails}}
+      <div class="product-item">
+        <p>Titulo2: {{this.product.title}}</p>
+        <input type="hidden" name="productId" value="{{this.product._id}}" />
+        <label for="quantity{{this.product._id}}">Cantidad:</label>
+        <input type="number" id="quantity{{this.product._id}}" name="quantity{{this.product._id}}"
+          value="{{this.quantity}}" />
+        <button type="button" class="decrease-quantity-btn" data-product-id="{{this.product._id}}">-</button>
+        <button type="button" class="increase-quantity-btn" data-product-id="{{this.product._id}}">+</button>
 
-            <p>Precio Unitario: ${{this.product.price}}</p>
-          </div>
-        {{/each}}
-        <button type="submit">Confirmar Compra</button>
-      </form>
-      <br />
-      <a href="/delete-cart"><button>Cancelar carrito</button></a>
+        <button type="button" class="remove-product-btn" data-product-id="{{this.product._id}}">Eliminar</button>
+
+        <p>Precio Unitario: ${{this.product.price}}</p>
+      </div>
+      {{/each}}
+      <button type="submit">Confirmar Compra</button>
+    </form>
+    <br />
+
+
+    <button type="button" class="empty-cart">
+      Vaciar el carrito
+    </button>
+
     {{else}}
-      <p>Tu carrito está vacío.</p>
+    <p>Tu carrito está vacío.</p>
     {{/if}}
 
     <button><a href="/products">Volver a Ver Productos</a></button>
-</div>
+  </div>
 
 
-<script src="/js/cart.js"></script>
-
+  <script src="/js/cart.js"></script>
