--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tu Carrito de Compras</title>
+  <title>Proceso de pago</title>
   <link rel="stylesheet" href="/css/cart.css" />
 </head>
 
 <body>
 
   <div id="cart" data-cart-id="{{cId}}">
-    <h1>Tu Carrito de Compras</h1>
+    <h1>Proceso de Pago</h1>
 
     {{#if cart.products.length}}
-    <form action="/confirm-cart" method="POST">
+    <form action="/payment-process/{{cId}}" method="GET">
       {{#each cart.productsDetails}}
       <div class="product-item">
         <p>Titulo2: {{this.product.title}}</p>
@@ -23,9 +23,7 @@
           value="{{this.quantity}}" />
         <button type="button" class="decrease-quantity-btn" data-product-id="{{this.product._id}}">-</button>
         <button type="button" class="increase-quantity-btn" data-product-id="{{this.product._id}}">+</button>
-
         <button type="button" class="remove-product-btn" data-product-id="{{this.product._id}}">Eliminar</button>
-
         <p>Precio Unitario: ${{this.product.price}}</p>
       </div>
       {{/each}}
@@ -43,7 +41,9 @@
     {{/if}}
 
     <button><a href="/products">Volver a Ver Productos</a></button>
+
   </div>
 
 
   <script src="/js/cart.js"></script>
+
