--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -38,5 +38,8 @@
     <button><a href="/products?page={{products.nextPage}}">Siguiente</a></button>
 {{/if}}
 
+<br><br>
+<a id="close-sesion" href="/logout" >Cerrar Sesión</a>
+
 
 <script src="js/products.js"></script>
