--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,45 +1,55 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestros Productos</title>
-    <link rel="stylesheet" href="css/products.css"> 
+    <link rel="stylesheet" href="css/products.css">
+
+    <script>
+        // Define the API URL based on the environment
+        const API_URL = window.location.hostname === 'localhost'
+            ? 'http://localhost:8080'
+            : 'https://entregafinal-clase46-production.up.railway.app';
+    </script>
 </head>
+
 <body>
 
-<div id="user-data" data-first-name="{{user.first_name}}" data-last-name="{{user.last_name}}" data-email="{{user.email}}"></div>
+    <div id="user-data" data-first-name="{{user.first_name}}" data-last-name="{{user.last_name}}"
+        data-email="{{user.email}}"></div>
     <h1>Nuestros Productos</h1>
     <h2>Bienvenid@ {{user.first_name}} {{user.last_name}}</h2>
     <br><br>
     {{#each products.payload}}
-        <div class="product-item">
-            <p>Id: {{this._id}}</p>
-            <p>Titulo: {{this.title}}</p>
-            <img src="{{this.thumbnail.[0]}}" alt="Imagen del producto" class="product-image">
-            <p>Descripcion: {{this.description}}</p>
-            <p>Codigo: {{this.code}}</p>
-            <p>Precio: $ {{this.price}}</p>
-            <p>Disponible: {{this.available}}</p>
-            <p>Stock: {{this.stock}}</p>
-            <p>Categoria: {{this.category}}</p>
-            <button class="add-to-cart-btn" id="{{this._id}}">AGREGAR AL CARRITO</button>
-            <br><br>
-        </div>
+    <div class="product-item">
+        <p>Id: {{this._id}}</p>
+        <p>Titulo: {{this.title}}</p>
+        <img src="{{this.thumbnail.[0]}}" alt="Imagen del producto" class="product-image">
+        <p>Descripcion: {{this.description}}</p>
+        <p>Codigo: {{this.code}}</p>
+        <p>Precio: $ {{this.price}}</p>
+        <p>Disponible: {{this.available}}</p>
+        <p>Stock: {{this.stock}}</p>
+        <p>Categoria: {{this.category}}</p>
+        <button class="add-to-cart-btn" id="{{this._id}}">AGREGAR AL CARRITO</button>
+        <br><br>
+    </div>
     {{/each}}
-</div>
+    </div>
 
-<a id="cart-link" href="#" style="position: absolute; top: 10px; right: 10px;">Ir al Carrito</a>
+    <a id="cart-link" href="#" style="position: absolute; top: 10px; right: 10px;">Ir al Carrito</a>
 
-{{#if products.hasPrevPage}}
+    {{#if products.hasPrevPage}}
     <button><a href="/products?page={{products.prevPage}}">Anterior</a></button>
-{{/if}}
+    {{/if}}
 
-{{#if products.hasNextPage}}
+    {{#if products.hasNextPage}}
     <button><a href="/products?page={{products.nextPage}}">Siguiente</a></button>
-{{/if}}
+    {{/if}}
 
-<br><br>
-<a id="close-sesion" href="/logout" >Cerrar Sesión</a>
+    <br><br>
+    <a id="close-sesion" href="/logout">Cerrar Sesión</a>
 
 
-<script src="js/products.js"></script>
+    <script src="js/products.js"></script>
