ajuste cart con apiURL

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TU CARRITO</title>
   <link rel="stylesheet" href="/css/cart.css" />
+
+  <script>
+        // Define the API URL based on the environment
+        const API_URL = window.location.hostname === 'localhost'
+            ? 'http://localhost:8080'
+            : 'https://entregafinal-clase46-production.up.railway.app';
+    </script>
 </head>
 
 <body>
