AJuste todos los handlebars por APIURL

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,3 +1,18 @@
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>INICIO DE SESION</title>
+    <script>
+        // Define the API URL based on the environment
+        const API_URL = window.location.hostname === 'localhost'
+            ? 'http://localhost:8080'
+            : 'https://entregafinal-clase46-production.up.railway.app';
+    </script>
+    
+</head>
+
 <h1>INICIO DE SESION</h1>
 
 <form action="/api/session/login" method="post">
@@ -13,3 +28,4 @@
 <h5 id="resultMessage"></h5>
 
 <script src="js/login.js"></script>
+
