--- a/src/views/recoverpass.handlebars
+++ b/src/views/recoverpass.handlebars
@@ -1,3 +1,19 @@
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recover Pass</title>
+    
+    <script>
+        // Define the API URL based on the environment
+        const API_URL = window.location.hostname === 'localhost'
+            ? 'http://localhost:8080'
+            : 'https://entregafinal-clase46-production.up.railway.app';
+    </script>
+    
+</head>
+
 <h1>RECUPERACIÓN DE PASSWORD</h1>
 
 <form id="recoverForm" method="post">
