--- a/src/views/payment-process.handlebars
+++ b/src/views/payment-process.handlebars
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tu Carrito de Compras</title>
-  <link rel="stylesheet" href="/css/cart.css" />
+
+      <script>
+        // Define the API URL based on the environment
+        const API_URL = window.location.hostname === 'localhost'
+            ? 'http://localhost:8080'
+            : 'https://entregafinal-clase46-production.up.railway.app';
+    </script>
 </head>
 
 <body>
